优化删除备份数据库操作，备份文件不存在也可以删除

--- a/application/home/view/debug/detail.html
+++ b/application/home/view/debug/detail.html
@@ -121,8 +121,8 @@
                                             {{foreach $header_fields as $header_field}}
 
                                             <tr>
-                                                <td style="width:25%"> <input name="header[key][]" class="form-control js_selectHeaderBtn" placeholder="key" value="{{$header_field.name}}" /> </td>
-                                                <td style="width:40%"> <input name="header[value][]" class="form-control" placeholder="value" value="{{$header_field.default_value}}" /> </td>
+                                                <td style="width:25%"> <input name="header[key][]" class="form-control js_selectHeaderBtn" placeholder="key" datatype="*" value="{{$header_field.name}}" /> </td>
+                                                <td style="width:40%"> <input name="header[value][]" class="form-control" placeholder="value" datatype="*"  value="{{$header_field.default_value}}" /> </td>
                                                 <td style="width:30%"> <input class="form-control" placeholder="description" value="{{$header_field.intro}}" /> </td>
                                                 <td style="width:5%">
                                                     <a href="javascript:void(0);" class="fa fa-trash-o js_deleteBtn" data-title="删除header参数" data-project_id="3"></a> </td>
@@ -155,8 +155,8 @@
                                             <tbody>
                                             {{foreach $request_fields as $request_field}}
                                             <tr>
-                                                <td style="width:25%"><input name="request[key][]" class="form-control" placeholder="key" value="{{$request_field.name}}"/></td>
-                                                <td style="width:40%"><input name="request[value][]" class="form-control" placeholder="value" value="{{$request_field.default_value}}"/></td>
+                                                <td style="width:25%"><input name="request[key][]" class="form-control" placeholder="key" datatype="*"  value="{{$request_field.name}}"/></td>
+                                                <td style="width:40%"><input name="request[value][]" class="form-control" placeholder="value" datatype="*"  value="{{$request_field.default_value}}"/></td>
                                                 <td style="width:30%"><input class="form-control" placeholder="description" value="{{$request_field.title}}"/></td>
                                                 <td style="width:5%">
                                                     <a href="javascript:void(0);" class="fa fa-trash-o js_deleteBtn" data-project_id="3"></a>
