响应字段mock规则新增智能提示

--- a/application/home/view/field/response/add.html
+++ b/application/home/view/field/response/add.html
@@ -71,7 +71,7 @@
 
         //选择mock规则
         var selectMemberBtn = $('.js_selectMockRuleBtn');
-        var localArrayData = "{{$methods}}";
+        var localArrayData = {{$methods}};
 
         selectMemberBtn.typeahead({
             source: localArrayData,
