修改资料改为个人设置

--- a/application/admin/view/index.html
+++ b/application/admin/view/index.html
@@ -162,8 +162,6 @@
                         <p>程序版本：V{{$system.gophp_version}} <a target="_blank" href="https://github.com/gouguoyin/phprap/releases">最新版本</a></p>
                         <p>系统环境：{{PHP_OS}}+PHP{{$system.php_version}}+MySQL{{$system.mysql_version}}</p>
                         <p>使用技术：PHP+MySQL+Bootstrap+JQuery</p>
-                        <p>最大执行时间：{{get_cfg_var("max_execution_time")}}秒</p>
-                        <p>最大上传文件：{{ini_get('upload_max_filesize')}}</p>
                         <p>系统开发：<a target="_blank" href="http://www.gouguoyin.cn/about.html">勾国印</a></p>
                         <p>官方网站：<a target="_blank" href="http://phprap.gouguoyin.cn/">phprap.gouguoyin.cn</a></p>
                         <p>演示网站：<a target="_blank" href="http://phprap.gouguoyin.cn">apidoc.gouguoyin.cn</a></p>
@@ -178,11 +176,16 @@
                 <!-- /.panel -->
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <i class="fa fa-comments fa-fw"></i> 开发动态
+                        <i class="fa fa-comments fa-fw"></i> 常见问题
                     </div>
                     <!-- /.panel-heading -->
                     <div class="panel-body">
-                        <script src='//gitee.com/gouguoyin/phprap/widget_preview'></script>
+                        <p><a target="_blank" href="https://github.com/gouguoyin/phprap/releases">安装时报错General error: 1366 Incorrect integer value: '' for column 'id' at row 1</a></p>
+                        <p><a target="_blank" href="https://github.com/gouguoyin/phprap/releases">虚拟主机不能绑定域名到public目录怎么办?</a></p>
+                        <p><a target="_blank" href="https://github.com/gouguoyin/phprap/releases">NGINX环境下安装时不断刷新页面</a></p>
+                        <p><a target="_blank" href="https://github.com/gouguoyin/phprap/releases">如何手动安装PHPRAP?</a></p>
+                        <p><a target="_blank" href="https://github.com/gouguoyin/phprap/releases">如何查看错误日志?</a></p>
+                        <p><a target="_blank" href="https://github.com/gouguoyin/phprap/releases">如何关闭异常提示页面?</a></p>
                     </div>
                     <!-- /.panel-body -->
                 </div>
