--- a/application/home/view/public/nav.html
+++ b/application/home/view/public/nav.html
@@ -36,7 +36,7 @@
                 <li><a href="{{url('project/search')}}"><i class="fa fa-search fa-fw"></i> 搜索项目</a>
                 </li>
 
-                <li><a href="#" data-toggle="modal" data-target="#js_settingProfileModal"><i class="fa fa-user fa-fw"></i> 修改资料</a>
+                <li><a href="#" data-toggle="modal" data-target="#js_settingProfileModal"><i class="fa fa-user fa-fw"></i> 个人设置</a>
                 </li>
                 {{if \app\user::is_admin()}}
                 <li><a href="{{url('admin')}}"><i class="fa fa-gear fa-fw"></i> 管理中心</a>
