--- a/application/home/view/public/footer.html
+++ b/application/home/view/public/footer.html
@@ -6,7 +6,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                        <h4 class="modal-title" id="settingLabel">修改资料</h4>
+                        <h4 class="modal-title" id="settingLabel">个人设置</h4>
                     </div>
                     <div class="modal-body">
 
