修改资料改为个人设置

--- a/application/home/view/project/select.html
+++ b/application/home/view/project/select.html
@@ -148,7 +148,7 @@
                 <p>{{_uri('project', $project_id, 'intro')}}</p>
             </div>
             <div class="panel-footer">
-                创建时间({{_uri('project', $project_id, 'intro')}})
+                创建时间({{_uri('project', $project_id, 'add_time')}})
                 <br>
                 加入时间({{$join_project.add_time}})
             </div>
