修改管理主页内容

--- a/application/admin/view/index.html
+++ b/application/admin/view/index.html
@@ -180,12 +180,13 @@
                     </div>
                     <!-- /.panel-heading -->
                     <div class="panel-body">
-                        <p><a target="_blank" href="https://github.com/gouguoyin/phprap/releases">安装时报错General error: 1366 Incorrect integer value: '' for column 'id' at row 1</a></p>
-                        <p><a target="_blank" href="https://github.com/gouguoyin/phprap/releases">虚拟主机不能绑定域名到public目录怎么办?</a></p>
-                        <p><a target="_blank" href="https://github.com/gouguoyin/phprap/releases">NGINX环境下安装时不断刷新页面</a></p>
-                        <p><a target="_blank" href="https://github.com/gouguoyin/phprap/releases">如何手动安装PHPRAP?</a></p>
-                        <p><a target="_blank" href="https://github.com/gouguoyin/phprap/releases">如何查看错误日志?</a></p>
-                        <p><a target="_blank" href="https://github.com/gouguoyin/phprap/releases">如何关闭异常提示页面?</a></p>
+
+                        <p><a target="_blank" href="http://phprap.gouguoyin.cn/doc/faq.html#faq1">安装时报错General error: 1366 Incorrect integer value: '' for column 'id' at row 1</a></p>
+                        <p><a target="_blank" href="http://phprap.gouguoyin.cn/doc/faq.html#faq2">虚拟主机不能绑定域名到public目录怎么办?</a></p>
+                        <p><a target="_blank" href="http://phprap.gouguoyin.cn/doc/faq.html#faq3">NGINX环境下安装时不断刷新页面</a></p>
+                        <p><a target="_blank" href="http://phprap.gouguoyin.cn/doc/faq.html#faq4">如何手动安装PHPRAP?</a></p>
+                        <p><a target="_blank" href="http://phprap.gouguoyin.cn/doc/faq.html#faq5">如何查看错误日志?</a></p>
+                        <p><a target="_blank" href="http://phprap.gouguoyin.cn/doc/faq.html#faq6">如何关闭异常提示页面?</a></p>
                     </div>
                     <!-- /.panel-body -->
                 </div>
