右上角菜单意见反馈修改为帮助文档

--- a/application/home/view/public/nav.html
+++ b/application/home/view/public/nav.html
@@ -42,7 +42,7 @@
                 <li><a href="{{url('admin')}}"><i class="fa fa-gear fa-fw"></i> 管理中心</a>
                 </li>
                 {{/if}}
-                <li><a target="_blank" href="//shang.qq.com/wpa/qunwpa?idkey=0aa8a845fef6c0f633d0823c765009b8d0c83979ce8e4591a4219ef668631d1a"><i class="fa fa-qq fa-fw"></i> 问题反馈</a>
+                <li><a target="_blank" href="http://phprap.gouguoyin.cn/doc/introduce.html"><i class="fa fa-file-text fa-fw"></i> 帮助文档</a>
                 </li>
                 <li class="divider"></li>
                 <li><a class="js_logoutBtn" href="#"><i class="fa fa-sign-out fa-fw"></i> 退出登录</a>
