--- a/application/install/view/step2.html
+++ b/application/install/view/step2.html
@@ -62,7 +62,7 @@
                                         <div class="form-group">
                                             <label class="col-sm-2 control-label">数据库名</label>
                                             <div class="col-sm-10">
-                                                <input type="text" name="step2[name]" class="form-control" datatype="*" value="apidoc">
+                                                <input type="text" name="step2[name]" class="form-control" datatype="*" value="phprap">
                                             </div>
                                         </div>
 
