--- a/application/home/view/project/export.html
+++ b/application/home/view/project/export.html
@@ -100,6 +100,34 @@
                     </li>
                     <li><p class="text-muted"><label>请求类型：</label>{{\app\api::get_method_list($api.method)}}</p></li>
                     <li><p class="text-muted"><label>接口描述：</label>{{$api.intro}}</p></li>
+
+                    <li>
+                        <p class="text-muted"><label>Header参数：</label></p>
+                        <div class="table-responsive">
+                            <table class="table table-striped table-bordered table-hover">
+                                <thead>
+                                <tr class="success">
+                                    <th>字段键</th>
+                                    <th>字段值</th>
+                                    <th>备注说明</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                {{$header_fields = \app\field::get_field_list($api_id, 3)}}
+                                {{foreach $header_fields as $header_field}}
+                                <tr class="{{$request_field.class}}">
+                                    <td>{{$header_field.name}}</td>
+
+                                    <td>{{$header_field.default_value}}</td>
+                                    <td>{{$header_field.intro}}</td>
+                                </tr>
+                                {{/foreach}}
+
+                                </tbody>
+                            </table>
+                        </div>
+                    </li>
+
                     <li>
                         <p class="text-muted"><label>请求参数：</label></p>
                         <div class="table-responsive">
