--- a/application/install/view/step1.html
+++ b/application/install/view/step1.html
@@ -131,9 +131,9 @@
                                                 </tr>
 
                                                 <tr>
-                                                    <td>MCRYPT扩展</td>
+                                                    <td>OPENSSL扩展</td>
                                                     <td>
-                                                        {{if extension_loaded('mcrypt')}}
+                                                        {{if extension_loaded('openssl')}}
                                                         支持
                                                         {{else}}
                                                         不支持
@@ -141,11 +141,11 @@
                                                     </td>
                                                     <td>支持</td>
                                                     <td>
-                                                        {{if extension_loaded('mcrypt')}}
+                                                        {{if extension_loaded('openssl')}}
                                                         <i class="fa fa-check"></i>
                                                         {{else}}
                                                         <i class="fa fa-times"></i>
-                                                        <input type="hidden" name="step1['mcrypt']" value="必须安装MCRYPT扩展" >
+                                                        <input type="hidden" name="step1['openssl']" value="必须安装OPENSSL扩展" >
                                                         {{/if}}
                                                     </td>
                                                 </tr>
