--- a/application/home/view/project/select.html
+++ b/application/home/view/project/select.html
@@ -218,7 +218,7 @@
                     </div>
                     <div class="form-group">
                         <input name="id" type="hidden" class="form-control">
-                        <input name="password" type="text" class="form-control" placeholder="重要操作，请输入登录密码" datatype="s5-50" nullmsg="请输入登录密码!" errormsg="请输入正确的登录密码!">
+                        <input name="password" type="text" class="form-control" placeholder="重要操作，请输入登录密码" datatype="*" nullmsg="请输入登录密码!" errormsg="请输入正确的登录密码!">
                     </div>
                 </div>
                 <div class="modal-footer">
