修复安装第一步pdo扩展没安装时提示信息错误的BUG

--- a/application/install/view/step1.html
+++ b/application/install/view/step1.html
@@ -105,7 +105,7 @@
                                                         <i class="fa fa-check"></i>
                                                         {{else}}
                                                         <i class="fa fa-times"></i>
-                                                        <input type="hidden" name="step1['pdo']" value="必须安装pdo_mysql扩展" >
+                                                        <input type="hidden" name="step1['mysql']" value="必须安装pdo_mysql扩展" >
                                                         {{/if}}
                                                     </td>
                                                 </tr>
