修复安装第一步pdo扩展没安装时提示信息错误的BUG

--- a/application/install/view/step1.html
+++ b/application/install/view/step1.html
@@ -83,7 +83,7 @@
                                                 <tbody>
 
                                                 <tr>
-                                                    <td>PDO扩展</td>
+                                                    <td>pdo扩展</td>
                                                     <td>{{if class_exists('pdo')}}支持{{else}}不支持{{/if}}</td>
                                                     <td>支持</td>
                                                     <td>
@@ -97,7 +97,7 @@
                                                 </tr>
 
                                                 <tr>
-                                                    <td>PDO_MYSQL扩展</td>
+                                                    <td>pdo_mysql扩展</td>
                                                     <td>{{if extension_loaded('pdo_mysql')}}支持{{else}}不支持{{/if}}</td>
                                                     <td>支持</td>
                                                     <td>
@@ -111,7 +111,7 @@
                                                 </tr>
 
                                                 <tr>
-                                                    <td>GD扩展</td>
+                                                    <td>gd扩展</td>
                                                     <td>
                                                         {{if function_exists('imagecreate')}}
                                                         支持
@@ -131,7 +131,7 @@
                                                 </tr>
 
                                                 <tr>
-                                                    <td>OPENSSL扩展</td>
+                                                    <td>openssl扩展</td>
                                                     <td>
                                                         {{if extension_loaded('openssl')}}
                                                         支持
