修复安装第一步pdo扩展没安装时提示信息错误的BUG

--- a/application/install/view/step1.html
+++ b/application/install/view/step1.html
@@ -5,17 +5,17 @@
 
 <body>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-md-10 col-md-offset-1">
-                <div class="install-panel panel panel-default">
-                    <div class="panel-heading">
-                        <h3 class="panel-title text-center">安装步骤一</h3>
-                    </div>
-                    <div class="panel-body">
+<div class="container">
+    <div class="row">
+        <div class="col-md-10 col-md-offset-1">
+            <div class="install-panel panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title text-center">安装步骤一</h3>
+                </div>
+                <div class="panel-body">
 
-                        {{include_file name='public/nav' step=1}}
-                        <form id="js_step1Form" role="form" action="{{url('install/step1')}}" method="post">
+                    {{include_file name='public/nav' step=1}}
+                    <form id="js_step1Form" role="form" action="{{url('install/step1')}}" method="post">
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="panel panel-default">
@@ -83,7 +83,7 @@
                                                 <tbody>
 
                                                 <tr>
-                                                    <td>PDO扩展</td>
+                                                    <td>pdo扩展</td>
                                                     <td>{{if class_exists('pdo')}}支持{{else}}不支持{{/if}}</td>
                                                     <td>支持</td>
                                                     <td>
@@ -97,7 +97,7 @@
                                                 </tr>
 
                                                 <tr>
-                                                    <td>PDO_MYSQL扩展</td>
+                                                    <td>pdo_mysql扩展</td>
                                                     <td>{{if extension_loaded('pdo_mysql')}}支持{{else}}不支持{{/if}}</td>
                                                     <td>支持</td>
                                                     <td>
@@ -111,7 +111,7 @@
                                                 </tr>
 
                                                 <tr>
-                                                    <td>GD扩展</td>
+                                                    <td>gd扩展</td>
                                                     <td>
                                                         {{if function_exists('imagecreate')}}
                                                         支持
@@ -131,7 +131,7 @@
                                                 </tr>
 
                                                 <tr>
-                                                    <td>OPENSSL扩展</td>
+                                                    <td>openssl扩展</td>
                                                     <td>
                                                         {{if extension_loaded('openssl')}}
                                                         支持
@@ -246,59 +246,59 @@
                             </div>
 
                         </div>
-                        </form>
-                    </div>
-
+                    </form>
                 </div>
+
             </div>
         </div>
-
     </div>
-    <script>
 
-        $(function(){
+</div>
+<script>
 
-            //验证登录表单
-            $("#js_step1Form").Validform({
+    $(function(){
 
-                tiptype:function(msg,o,cssctl){
+        //验证登录表单
+        $("#js_step1Form").Validform({
 
-                    if(!o.obj.is("form")){
+            tiptype:function(msg,o,cssctl){
 
-                        var objtip=o.obj.siblings(".Validform_checktip");
+                if(!o.obj.is("form")){
 
-                        cssctl(objtip,o.type);
+                    var objtip=o.obj.siblings(".Validform_checktip");
 
-                        objtip.text(msg);
+                    cssctl(objtip,o.type);
 
-                    }
-
-                },
-
-                label:"label",
-
-                ajaxPost:true,
-
-                btnSubmit: '.js_submit',
-
-                callback:function(json){
-
-                    if(json.code == 200){
-
-                        window.location.href = "{{url('install/step2')}}";
-
-                    }else{
-
-                        alert(json.msg, 2000);
-
-                    }
+                    objtip.text(msg);
 
                 }
 
-            });
+            },
+
+            label:"label",
+
+            ajaxPost:true,
+
+            btnSubmit: '.js_submit',
+
+            callback:function(json){
+
+                if(json.code == 200){
+
+                    window.location.href = "{{url('install/step2')}}";
+
+                }else{
+
+                    alert(json.msg, 2000);
+
+                }
+
+            }
+
+        });
 
 
-        })
+    })
 
-    </script>
-    {{include_file name='public/footer'}}
+</script>
+{{include_file name='public/footer'}}
