--- a/application/admin/view/public/nav.html
+++ b/application/admin/view/public/nav.html
@@ -42,7 +42,7 @@
                 </li>
                 {{/if}}
 
-                <li><a target="_blank" href="http://phprap.gouguoyin.cn/doc/index.html"><i class="fa fa-file-text fa-fw"></i> 帮助文档</a>
+                <li><a target="_blank" href="http://www.phprap.com/doc/index.html"><i class="fa fa-file-text fa-fw"></i> 帮助文档</a>
                 </li>
                 <li class="divider"></li>
                 <li><a class="js_logoutBtn" href="#"><i class="fa fa-sign-out fa-fw"></i> 退出登录</a>
