--- a/application/install/view/step2.html
+++ b/application/install/view/step2.html
@@ -139,7 +139,14 @@
 
         });
 
-
+        //百度统计
+        var _hmt = _hmt || [];
+        (function() {
+            var hm = document.createElement("script");
+            hm.src = "https://hm.baidu.com/hm.js?daf0d8924deff98ade7d56994ec572d8";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(hm, s);
+        })();
     })
 
 </script>
