--- a/application/home/view/project/tab.html
+++ b/application/home/view/project/tab.html
@@ -2,6 +2,6 @@
 <ul class="nav nav-tabs">
     <li {{if $tab == 'home'}}class="active"{{/if}}><a href="{{url()}}?tab=home">项目主页</a></li>
     <li {{if $tab == 'member'}}class="active"{{/if}}><a href="{{url()}}?tab=member">项目成员</a></li>
-<!--    <li><a href="{{url()}}?tab=map">数据字典</a></li>-->
+    <li {{if $tab == 'map'}}class="active"{{/if}}><a href="{{url()}}?tab=map">数据字典</a></li>
     <li {{if $tab == 'history'}}class="active"{{/if}}><a href="{{url()}}?tab=history">项目动态</a></li>
 </ul>
