--- a/application/home/view/map/index_bak.html
+++ b/application/home/view/map/index_bak.html
@@ -5,54 +5,12 @@
         text-indent: 8px;
         border-left: 2px solid #88B7E0;
     }
-    .upload-box {
-        border: 2px dashed #efefef;
-        border-radius: 5px;
-        background: white;
-        min-height: 150px;
-        padding: 20px 20px;
-        cursor: pointer;
-        margin-bottom: 20px;
-    }
-
-    .upload-box .icon {
-        margin: 0 auto .8rem;
-        display: inline-block;
-        width: 6.4rem;
-        height: 5.760000000000001rem;
-        background-position: -11.8rem -22.1rem;
-        background-repeat: no-repeat;
-        -webkit-background-size: 60rem;
-        -moz-background-size: 60rem;
-        background-size: 60rem;
-        display: block;
-    }
-
-    .upload-box .icon i{
-        opacity: .6;
-    }
-
-    .upload-box p {
-        margin: 0;
-        text-align: center;
-        font-weight: bold;
-        font-size: 1.75rem;
-    }
-
-    .upload-box p small {
-        font-weight: normal;
-        font-size: 1.28rem;
-        opacity: .7;
-        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=70)";
-        filter: alpha(opacity=70);
-    }
-
     .sql-upload {
         position: absolute;
         top: 0;
         left: 0;
-        width: 100%;
-        height: 260px;
+        width: 60px;
+        height: 30px;
         padding: 0;
         cursor: pointer;
         filter:alpha(opacity=0);
@@ -60,7 +18,6 @@
         opacity:0;
         outline: medium none;
     }
-
 </style>
 
 </head>
@@ -78,21 +35,17 @@
                     <h1>数据字典 </h1>
                     <div class="opt-btn">
 
-                        {{if \app\member::has_rule({{$project.id}}, 'map', 'import')}}
-                        <a href="javascript:void(0);" class="btn hidden-xs btn-sm btn-info js_importMapBtn" data-toggle="tooltip" title="导入建表sql文件" data-placement="bottom"><i class="fa fa-fw fa-upload"></i>导入</a>
+                        <a href="javascript:void(0);" class="btn hidden-xs btn-sm btn-info" data-toggle="tooltip" title="导入建表sql文件" data-placement="bottom"><i class="fa fa-fw fa-upload"></i>导入
+                            <input id="sql-upload" class="sql-upload" type="file" name="sql-file">
+                        </a>
+
+                        {{if \app\user::is_creater({{$project.id}})}}
+                        <a href="javascript:void(0);" class="btn hidden-xs btn-sm btn-success" data-toggle="tooltip" title="编辑数据字典" data-placement="bottom" data-id="{{$project.id}}"><i class="fa fa-fw fa-edit"></i>编辑</a>
                         {{/if}}
 
-                        {{if \app\member::has_rule({{$project.id}}, 'map', 'update')}}
-                        <a href="javascript:void(0);" class="btn hidden-xs btn-sm btn-success js_editMapBtn" data-toggle="tooltip" title="编辑数据字典" data-placement="bottom" data-id="{{$project.id}}"><i class="fa fa-fw fa-edit"></i>编辑</a>
-                        {{/if}}
-
-                        {{if \app\member::has_rule({{$project.id}}, 'map', 'delete')}}
                         <a {{if !$maps}}disabled{{/if}} href="javascript:void(0);" class="btn btn-sm btn-danger js_deleteMapBtn" data-toggle="tooltip" title="删除数据字典" data-placement="bottom"  data-id="{{$project.id}}"><i class="fa fa-fw fa-times"></i>删除</a>
-                        {{/if}}
 
-                        {{if \app\member::has_rule({{$project.id}}, 'map', 'export')}}
                         <a {{if !$maps}}disabled{{/if}} href="{{url("map/export")}}?id={{id_encode($project.id)}}" class="btn hidden-xs btn-sm btn-warning" data-toggle="tooltip" title="导出HTML" data-placement="bottom"><i class="fa fa-fw fa-download"></i>导出</a>
-                        {{/if}}
                     </div>
                 </div>
             </div>
@@ -165,45 +118,6 @@
 
 <hr>
 <p class="text-center">{{get_config('copyright')}}</p>
-
-<!-- 导入数据字典模态框 -->
-<div class="modal fade" id="js_importMapModal" tabindex="2" role="dialog">
-    <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title">导入数据字典</h4>
-                </div>
-                <div class="modal-body">
-                    <div class="alert alert-dismissable alert-warning">
-                        <i class="fa fa-fw fa-info-circle"></i>
-                        导入建表sql文件后会覆盖已有数据字典，请谨慎操作！
-                    </div>
-                    <div class="form-group">
-
-                        <div class="upload-box">
-                            <div class="icon"><i class="fa fa-fw fa-upload fa-5x"></i></div>
-                            <p>点击这里上传建表sql文件</p>
-                            <p><small>上传文件最大不能超过2M</small></p>
-                            <input id="sql-upload" class="sql-upload" type="file" name="sql-file">
-                        </div>
-
-                        <div class="progress">
-                            <div id="processbar" class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 5%">
-                                0%
-                            </div>
-                        </div>
-
-
-
-                    </div>
-
-                </div>
-
-            </div><!-- /.modal-content -->
-    </div><!-- /.modal-dialog -->
-</div>
-
 <!-- 删除数据字典模态框 -->
 <div class="modal fade" id="js_deleteMapModal" tabindex="2" role="dialog">
     <div class="modal-dialog" role="document">
@@ -237,7 +151,7 @@
 
 <script>
 
-    //ajax文件上传
+    //sql文件上传
     function ajaxFileUpload() {
 
         $.ajaxFileUpload({
@@ -253,22 +167,9 @@
                     alert(data.msg, 3000);
                 }else{
 
-                    function setProcess(){
-                        var processbar = document.getElementById("processbar");
-                        processbar.style.width = parseInt(processbar.style.width) + 5 + "%";
-                        processbar.innerHTML   = processbar.style.width;
-                        if(processbar.style.width == "100%"){
-
-                            $('.js_restoreStatus').text('还原成功，页面刷新中').removeClass('disabled');
-                            window.setInterval(function(){
-                                parent.location.reload();
-                            },1000);
-                            window.clearInterval(bartimer);
-                        }
-                    }
-
-                    var bartimer = window.setInterval(function(){setProcess();},100);
-
+                    alert(data.msg, 1000, function () {
+                        location.reload();
+                    });
                 }
 
             },
@@ -284,21 +185,20 @@
 
     $(function(){
 
-        // 导入数据字典
-        $(document).delegate('.js_importMapBtn', 'click',function(){
-
-            $('#js_importMapModal').modal('show');
-
-        });
-
         $("#sql-upload").on('change', function () {
-            ajaxFileUpload();
+            confirm('导入建表sql文件后会覆盖已有数据字典，您确认要导入?', function(){
+
+                $(this).attr("disabled", "true");
+                ajaxFileUpload();
+
+            });
         });
 
-        // 修改数据字典
-        $(document).delegate('.js_editMapBtn', 'click',function(){
-            var id = $(this).data('id');
-            $('#page-wrapper').load("{{url('map/edit')}}", {'id':id});
+        //删除数据字典表单合法性验证
+        $("#js_deleteMapForm").validateForm({
+            success:function () {
+                parent.location.reload();
+            },
         });
 
         // 删除数据字典
@@ -312,13 +212,6 @@
             $('#js_deleteMapModal input[name=id]').val(id);
 
             $('#js_deleteMapModal').modal('show');
-        });
-
-        //删除数据字典表单合法性验证
-        $("#js_deleteMapForm").validateForm({
-            success:function () {
-                parent.location.reload();
-            },
         });
 
     });
